--- a/index44.html
+++ b/index44.html
@@ -13,7 +13,7 @@
   <h2> DASOL CATHOLIC SCHOOL INC. </h2>
       <img src="C:\Users\DCS Entrance RFID\Desktop\school-website2\logo.jpg" alt ="logo" class= style="width: 7%; height: 7%">
       <img src="C:\Users\DCS Entrance RFID\Desktop\school-website2\school-website\background\logo2.jpg" alt="Logo" class="logo"style="width: 50%; height: 10%;">
-      <img src="background/LOGO2.jpg" alt ="logo" class= style="width: 7%; height: 7%">   
+      <img src="E:\school-website22\background\LOGO2.jpg" alt ="logo" class= style="width: 7%; height: 7%">   
     <div>
       <ul>
       <b><li><a href="#about">About</a></li></b>
@@ -144,19 +144,21 @@
 
   <div class="video-gallery">
     <video controls>
-      <source src="video gallery/school tour5.mp4" type="video/mp4">
+      <source src="E:\school-website22\video gallery\school tour5.mp4" type="video/mp4">
        <p>let my people go.</p>
       Your browser does not support the video tag.
     </video>
 
     <video controls>
-      <source src="video gallery/school tour6.mp4" type="video/mp4">
+      <source src="E:\school-website22\video gallery\school tour4.mp4" type="video/mp4">
        <p>let my people go.</p>
     </video>
 
     <video controls>
-      <source src="C:\Users\DCS Entrance RFID\Desktop\school-website2\video gallery\school tour4.mp4" type="video/mp4">
+      <source src="E:\school-website22\video gallery\school tour6.mp4" type="video/mp4">
        <p>let my people go.</p>
+
+
     </video>
   </div>
 </section>
